@startuml

title __SHARED's Class Diagram__\n

  namespace Shared {
    class Shared.Command {
        + Command()
        + getCommandType()
        + getDataCommand()
        + setCommandType()
        + setDataCommand()
    }
  }
  

  namespace Shared {
    enum CommandType {
      CLEAR
      COUNT_LESS_THAN_OSCARS_COUNT
      EXECUTE_SCRIPT
      HELP
      INFO
      INSERT
      PRINT_ASCENDING
      PRINT_FIELD_DESCENDING_OSCARS_COUNT
      REMOVE_GREATER_KEY
      REMOVE_KEY
      REPLACE_IF_GREATER
      REPLACE_IF_LOWER
      SHOW
      UPDATE
    }
  }
  

  namespace Shared {
    class Shared.DataBox {
        ~ dataFile : String
        ~ key : Long
        ~ oscarsCount : long
        ~ response : String
        + getDataFile()
        + getKey()
        + getMovie()
        + getOscarsCount()
        + getResponse()
        + setDataFile()
        + setKey()
        + setMovie()
        + setOscarsCount()
        + setResponse()
    }
  }
  

  namespace Shared {
    class Shared.DataBoxHandler {
        {static} + getDataBox()
        {static} - readDataCommandCountLessThanOscars()
        {static} - readDataCommandExecuteScript()
        {static} - readDataCommandInsert()
        {static} - readDataCommandRemoveKey()
        {static} - readDataCommandReplace()
        {static} - readDataCommandUpdate()
        {static} - readMovie()
    }
  }
  

  namespace Shared {
    class Shared.SerializationHandler {
        {static} + HEADER : int
        {static} + SIZE : int
        {static} + deserialize()
        {static} + getRepetition()
        {static} + serialize()
    }
  }
  

  namespace Shared {
    class Shared.SizeMessage {
        + Size : int
    }
  }
  

  Shared.Command .up.|> java.io.Serializable
  Shared.Command o-- Shared.CommandType : commandType
  Shared.Command o-- Shared.DataBox : dataCommand
  Shared.CommandType .up.|> java.io.Serializable
  Shared.DataBox .up.|> java.io.Serializable
  Shared.DataBox o-- Entidades.Movie : movie
  Shared.SizeMessage .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
